--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,1 +1,16 @@
-<p>test works!</p>
+<h1>
+    {{name}} is {{20 + 11}} years old
+</h1>
+<h1>  
+    {{"His name is " + name}}
+</h1>
+<h1>  
+    {{"The length of his name is: " + name.length}}
+</h1>
+<h1>  
+    {{greetUser()}}
+</h1>
+<h1>  
+    {{siteUrl}}
+</h1>
+
