Understanding Event Binding

--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -4,12 +4,20 @@
 <h1 [style.color]="hasError ? 'red': 'orange'">  
     {{"His name is " + name}}
 </h1>
+
+<button (click)="onClick($event)">
+    Greet
+</button>
+{{greeting}}
+
 <h1 [class.text-danger]="hasError" >  
     {{"The length of his name is: " + name.length}}
 </h1>
+
 <h1 [ngClass]="messageClasses">  
     {{greetUser()}}
 </h1>
+
 <h1>  
     {{siteUrl}}
 </h1>
