--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -8,7 +8,17 @@
 <button (click)="onClick($event)">
     Greet
 </button>
-{{greeting}}
+
+<!-- Template Reference Variables-->
+<input #myInput type="text">
+<button (click)="lowMessage(myInput)">
+    template reference variables
+</button>
+
+<!-- Two way binding: Always sync between view and model-->
+<input [(ngModel)]="textoSincronizado" type="text">
+{{textoSincronizado}}
+
 
 <h1 [class.text-danger]="hasError" >  
     {{"The length of his name is: " + name.length}}
